--- a/index.html
+++ b/index.html
@@ -15,32 +15,26 @@
             <h1 class="title">Calculator</h1>
         </header>
         <div class="calculator">
-            <div class="result-flex">
-                <div class="result-pane">
-                    <h2 class="result" id="result">0</h2>
-                </div>
+            <div class="result-container">
+                <h2 class="result" id="result">0</h2>
             </div>
             <div class="btn-container">
                 <button class="btn" id="clear" type="reset">AC</button>
                 <button class="btn" id="positive-negative" type="button">+/-</button>
                 <button class="btn" id="percent" type="button">%</button>
                 <button class="btn" id="divide" type="button">÷</button>
-
                 <button class="btn" id="seven" type="button">7</button>
                 <button class="btn" id="eight" type="button">8</button>
                 <button class="btn" id="nine" type="button">9</button>
                 <button class="btn" id="multiply" type="button">×</button>
-
                 <button class="btn" id="four" type="button">4</button>
                 <button class="btn" id="five" type="button">5</button>
                 <button class="btn" id="six" type="button">6</button>
                 <button class="btn" id="subtract" type="button">-</button>
-
                 <button class="btn" id="one" type="button">1</button>
                 <button class="btn" id="two" type="button">2</button>
                 <button class="btn" id="three" type="button">3</button>
                 <button class="btn" id="add" type="button">+</button>
-
                 <button class="btn" id="zero" type="button">0</button>
                 <button class="btn" id="decimal" type="button">.</button>
                 <button class="btn" id="equal" type="submit">=</button>
