Update @media query for responsive design

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </header>
         <div class="calculator">
             <div class="result-container">
-                <h2 class="result" id="result">0</h2>
+                <div class="result" id="result">0</div>
             </div>
             <div class="btn-container">
                 <button class="btn" id="clear" type="reset">AC</button>
