Operator buttons highlight when selected

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 <button class="btn" id="four" type="button">4</button>
                 <button class="btn" id="five" type="button">5</button>
                 <button class="btn" id="six" type="button">6</button>
-                <button class="btn" id="subtract" type="button">-</button>
+                <button class="btn" id="minus" type="button">-</button>
                 <button class="btn" id="one" type="button">1</button>
                 <button class="btn" id="two" type="button">2</button>
                 <button class="btn" id="three" type="button">3</button>
-                <button class="btn" id="add" type="button">+</button>
+                <button class="btn" id="plus" type="button">+</button>
                 <button class="btn" id="zero" type="button">0</button>
                 <button class="btn" id="decimal" type="button">.</button>
                 <button class="btn" id="equal" type="submit">=</button>
